<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_dados_cliente"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_maxima_cliente_selector"
        android:title="@string/label_dados_fragment" />

    <item
        android:id="@+id/navigation_historico_pedidos"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_maxima_historico_selector"
        android:title="@string/label_historico_pedidos" />

    <item
        android:id="@+id/navigation_alvaras"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_maxima_alvaras_selector"
        android:title="@string/label_alvaras_fragment" />

</menu>