<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.attm.maximatech.menu.MenuFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_navigation_menu_dados_cliente"
            app:destination="@id/navigation_dados_cliente"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dados_cliente"
        android:name="com.attm.maximatech.ui.dados.DadosFragment"
        android:label="@string/label_dados_toolbar"
        tools:layout="@layout/fragment_dados">
        <action
            android:id="@+id/action_navigation_dados_cliente_to_navigation_historico_pedidos"
            app:destination="@id/navigation_historico_pedidos"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/navigation_historico_pedidos"
        android:name="com.attm.maximatech.ui.historico.HistoricoFragment"
        android:label="@string/label_hist_toolbar"
        tools:layout="@layout/fragment_historico">
        <action
            android:id="@+id/action_navigation_historico_pedidos_to_navigation_alvaras"
            app:destination="@id/navigation_alvaras"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/navigation_alvaras"
        android:name="com.attm.maximatech.ui.alvara.AlvaraFragment"
        android:label="@string/label_alvaras_toolbar"
        tools:layout="@layout/fragment_alvaras" />
</navigation>