<?xml version="1.0" encoding="utf-8"?>
 <layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.attm.maximatech.ui.dados.DadosViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/cinza"
        tools:context=".ui.dados.DadosFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="24dp"
            app:cardCornerRadius="20dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="12.5dp"
            app:cardBackgroundColor="@color/branco"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp">

                <TextView
                    android:id="@+id/card_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="8pt"
                    android:fontFamily="@font/santral_bold"
                    android:textColor="@color/preto"
                    android:text="@string/card_dados_do_cliente_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_marginVertical="6.4dp"
                    app:layout_constraintStart_toStartOf="@+id/card_title"
                    app:layout_constraintTop_toBottomOf="@+id/card_title"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:id="@+id/codigo_e_razao_social"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/santral_bold"
                    android:layout_marginVertical="8dp"
                    android:maxLines="1"
                    android:textColor="@color/preto"
                    android:textSize="5pt"
                    android:text="@{viewModel.dadosCliente.dados.codigoERazaoSocial}"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintStart_toStartOf="@id/card_title"
                    app:layout_constraintEnd_toEndOf="@id/card_title"
                    app:layout_constraintHorizontal_bias="0.0" />
                <TextView
                    android:id="@+id/nome_fantasia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/santral_bold"
                    android:layout_marginTop="8dp"
                    android:maxLines="1"
                    android:textColor="@color/nome_fantasia_text"
                    android:textSize="5pt"
                    android:text="@{viewModel.dadosCliente.dados.nomeFantasia}"
                    app:layout_constraintTop_toBottomOf="@id/codigo_e_razao_social"
                    app:layout_constraintStart_toStartOf="@id/card_title"
                    app:layout_constraintEnd_toEndOf="@id/card_title"
                    app:layout_constraintHorizontal_bias="0.0" />
                    <TextView
                        android:id="@+id/cpf_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CPF:"
                        android:textSize="4.6pt"
                        android:textColor="@color/card_attr_names"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/nome_fantasia"
                        app:layout_constraintStart_toStartOf="@id/card_title"
                        app:layout_constraintEnd_toEndOf="@id/card_title"
                        app:layout_constraintHorizontal_bias="0.0"/>
                <TextView
                    android:id="@+id/cpf_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123.456.789-00"
                    android:textSize="4.6pt"
                    android:textColor="@color/preto"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@id/cpf_label"
                    app:layout_constraintStart_toEndOf="@id/cpf_label"
                    app:layout_constraintBottom_toBottomOf="@id/cpf_label"/>
                <TextView
                    android:id="@+id/cnpj_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CNPJ:"
                    android:textSize="4.6pt"
                    android:textColor="@color/card_attr_names"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/cpf_label"
                    app:layout_constraintStart_toStartOf="@id/card_title"
                    app:layout_constraintEnd_toEndOf="@id/card_title"
                    app:layout_constraintHorizontal_bias="0.0"/>

                <TextView
                    android:id="@+id/cnpj_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.dadosCliente.dados.cnpj}"
                    android:textSize="4.6pt"
                    android:textColor="@color/preto"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@id/cnpj_label"
                    app:layout_constraintStart_toEndOf="@id/cnpj_label"
                    app:layout_constraintBottom_toBottomOf="@id/cnpj_label"/>
                <TextView
                    android:id="@+id/ramo_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ramo de atividade:"
                    android:textSize="4.6pt"
                    android:textColor="@color/card_attr_names"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/cnpj_label"
                    app:layout_constraintStart_toStartOf="@id/card_title"
                    app:layout_constraintEnd_toEndOf="@id/card_title"
                    app:layout_constraintHorizontal_bias="0.0"/>

                <TextView
                    android:id="@+id/ramo_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.dadosCliente.dados.ramoAtividade}"
                    android:textColor="@color/preto"
                    android:textSize="4.6pt"
                    app:layout_constraintBottom_toBottomOf="@id/ramo_label"
                    app:layout_constraintStart_toEndOf="@id/ramo_label"
                    app:layout_constraintTop_toTopOf="@id/ramo_label" />

                <TextView
                    android:id="@+id/endereco_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/enderecos"
                    android:textColor="@color/card_attr_names"
                    android:textSize="4.6pt"
                    app:layout_constraintEnd_toEndOf="@id/card_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/card_title"
                    app:layout_constraintTop_toBottomOf="@id/ramo_label" />

                <TextView
                    android:id="@+id/endereco_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.dadosCliente.dados.endereco}"
                    android:textColor="@color/preto"
                    android:textSize="4.6pt"
                    app:layout_constraintBottom_toBottomOf="@id/endereco_label"
                    app:layout_constraintStart_toEndOf="@id/endereco_label"
                    app:layout_constraintTop_toTopOf="@id/endereco_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="24dp"
            app:cardCornerRadius="20dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="12.5dp"
            app:cardBackgroundColor="@color/branco"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp">

                <TextView
                    android:id="@+id/contact_card_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="5pt"
                    android:fontFamily="@font/santral_bold"
                    android:textColor="@color/preto"
                    android:text="@string/contatos_card_label"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <View
                    android:id="@+id/contact_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_marginVertical="5dp"
                    app:layout_constraintStart_toStartOf="@+id/contact_card_title"
                    app:layout_constraintTop_toBottomOf="@+id/contact_card_title"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contact_divider"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_contato" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/verify_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12.5dp"
                android:backgroundTint="@color/button_verify_client_stats"
                android:text="@string/button_verify_client_stats"
                android:textAllCaps="false"
                android:textColor="@color/branco"/>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>